WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253710
Fix build break after
261484@main
https://bugs.webkit.org/show_bug.cgi?id=253710
Summary
Fix build break after 261484@main
Takashi Komori
Reported
2023-03-10 09:23:13 PST
In tre ticket
https://bugs.webkit.org/show_bug.cgi?id=253614
, WebKit introduced RenderLayer::shouldPaintUsingCompositeCopy(), but this function is inside the preprocessor guard ENABLE(CSS_COMPOSITING) We have to add the same gurad not to call the function when CSS_COMPOSITING is not enabled. The function is called in RenderHTMLCanvas.cpp and RenderLayerBacking.cpp
Attachments
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2023-03-10 11:27:44 PST
https://github.com/WebKit/WebKit/pull/11372
EWS
Comment 2
2023-03-10 11:30:10 PST
Committed
261514@main
(79fa85a5f852): <
https://commits.webkit.org/261514@main
> Reviewed commits have been landed. Closing PR #11372 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-03-10 11:31:15 PST
<
rdar://problem/106563355
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug