Fix build break after 261484@main https://bugs.webkit.org/show_bug.cgi?id=253710

Unreviewed build fix.

Added ENABLE flag protection.

* Source/WebCore/rendering/RenderHTMLCanvas.cpp:
(WebCore::RenderHTMLCanvas::paintReplaced):
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateConfiguration):

Canonical link: https://commits.webkit.org/261514@main